# roq-cme

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README.md  TODO
benchmark/: .gitignore  CMakeLists.txt
src/roq/cme/: .gitignore  CMakeLists.txt  README  README.md  TODO  account.cpp  account.hpp  aggregator.hpp  application.cpp  application.hpp  authenticator.cpp  authenticator.hpp  buffer.cpp  buffer.hpp  capture.sh  channel.cpp  channel.hpp  common.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  drop_copy_state.json  gateway.cpp  gateway.hpp  index.rst  instrument.hpp  live.sh  main.cpp  market_data.cpp  market_data.hpp  market_data_state.json  mdp_receiver.cpp  mdp_receiver.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.json  security.cpp  security.hpp  settings.cpp  (+22 more)
src/roq/cme/benchmark/: .gitignore  CMakeLists.txt
src/roq/cme/channel_tester/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  main.cpp  settings.cpp  settings.hpp
src/roq/cme/config/: cme.toml  deribit-test-secrets.toml  deribit-test.toml  deribit.toml  iLink_Session_Access_Secret Key_Download_2023-04-01.txt
src/roq/cme/dump/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  main.cpp  pcap.cpp  pcap.hpp  settings.cpp  settings.hpp
src/roq/cme/filter/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  main.cpp  settings.cpp  settings.hpp  test.sh
src/roq/cme/fix/: .gitignore  CMakeLists.txt  README.md  adv_order_type.cpp  adv_order_type.hpp  affected_ord.json  execution_report.json  fill.json  heartbeat.json  instrmt_md_req.json  instrument.json  logon.json  logout.json  market_data_incremental_refresh.json  market_data_request.json  market_data_request_reject.json  market_data_snapshot_full_refresh.json  md_full.json  md_inc.json  md_req.json  new_order_single.json  order_cancel_reject.json  order_cancel_replace_request.json  order_cancel_request.json  order_mass_cancel_report.json  order_mass_cancel_request.json  order_mass_status_request.json  position_qty.json  position_report.json  reject.json  request_for_positions.json  resend_request.json  security_list.json  security_list_request.json  security_status.json  security_status_request.json  sequence_reset.json  test_request.json  user_request.json  user_response.json  (+2 more)
src/roq/cme/flags/: .gitignore  CMakeLists.txt  common.json  config.json  fix.json  flags.json  ilink.json  misc.json  multicast.json  settings.cpp  settings.hpp  test.json  web_socket.json
src/roq/cme/gateway/: CMakeLists.txt  account.cpp  account.hpp  channel.cpp  channel.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  mdp_receiver.cpp  mdp_receiver.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/cme/ilink/: CMakeLists.txt  business.hpp  config_reader.cpp  config_reader.hpp  establish.cpp  establish.hpp  execution_report.hpp  frame.cpp  frame.hpp  mass_quote.cpp  mass_quote.hpp  negotiate.cpp  negotiate.hpp  new_order_single.cpp  new_order_single.hpp  order.hpp  order_cancel_replace_request.cpp  order_cancel_replace_request.hpp  order_cancel_request.cpp  order_cancel_request.hpp  order_mass_action.hpp  order_mass_action_request.cpp  order_mass_action_request.hpp  order_mass_status_request.cpp  order_mass_status_request.hpp  parser.cpp  parser.hpp  party_details_definition_request.cpp  party_details_definition_request.hpp  party_details_list_request.cpp  party_details_list_request.hpp  quote_cancel.cpp  quote_cancel.hpp  security_definition.hpp  security_definition_request.cpp  security_definition_request.hpp  sequence.cpp  sequence.hpp  session.hpp  terminate.cpp  (+2 more)
src/roq/cme/ilink3/: CMakeLists.txt  business.hpp  execution_report.hpp  frame.cpp  frame.hpp  order.hpp  parser.cpp  parser.hpp  security_definition.hpp  session.hpp  utils.hpp
src/roq/cme/import/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  controller.cpp  controller.hpp  main.cpp  pcap.cpp  pcap.hpp  settings.cpp  settings.hpp  test.sh
src/roq/cme/json/: .gitignore  CMakeLists.txt  README.md  auth.json  changes.json  channel.json  combo_state.json  currencies.json  currency.json  direction.json  error.json  field.json  instrument.json  instrument_state.json  instruments.json  kind.json  method.json  option_type.json  order.json  order_book.json  order_state.json  order_type.json  orders.json  parser.cpp  parser.hpp  platform_state.json  portfolio.json  position.json  positions.json  quote.json  request_type.json  state.json  ticker.json  time_in_force.json  trade.json  trades.json  trades_2.json  utils.hpp
src/roq/cme/market_data/: CMakeLists.txt  channel.cpp  channel.hpp  config.hpp  dispatcher.hpp  incremental.cpp  incremental.hpp  instrument_definition.cpp  instrument_definition.hpp  manager.cpp  manager.hpp  market_by_order_recovery.cpp  market_by_order_recovery.hpp  market_by_price_recovery.cpp  market_by_price_recovery.hpp  mbofd_market_recovery.cpp  mbofd_market_recovery.hpp  mbp_market_recovery.cpp  mbp_market_recovery.hpp  options.hpp  security_definitions.cpp  security_definitions.hpp  shared.cpp  shared.hpp
src/roq/cme/mdp/: CMakeLists.txt  admin.hpp  config.cpp  config.hpp  config_reader.cpp  config_reader.hpp  connection_type.hpp  frame.cpp  frame.hpp  map.cpp  map.hpp  md_incremental_refresh.hpp  md_instrument_definition.cpp  md_instrument_definition.hpp  parser.cpp  parser.hpp  (+4 more)
test/: .gitignore  CMakeLists.txt  config.cpp  config.xml  establish.cpp  execution_report_outright.cpp  ilink_config_reader.cpp  ilink_simple.cpp  incremental.cpp  mbofd_recovery.cpp  md_incremental_refresh_book.cpp  md_incremental_refresh_trade_summary.cpp  md_instrument_definition.cpp  mdp.cpp  mdp3.cpp  mdp_config_reader.cpp  negotiate.cpp  new_order_single.cpp  order_mass_action_request.cpp  party_details_definition_request.cpp  sbe.cpp  secdef.cpp  snapshot_full_refresh.cpp  snapshot_full_refresh_order_book_53.cpp  tools_crypto.cpp
(+253 files in other folders)
