set(TARGET_NAME "${PROJECT_NAME}")

add_subdirectory("fix")
add_subdirectory("json")
add_subdirectory("flags")
add_subdirectory("tools")
add_subdirectory("sbe")

set(SOURCES
    application.cpp
    config.cpp
    drop_copy.cpp
    gateway.cpp
    market_data.cpp
    order_entry.cpp
    security.cpp
    shared.cpp
    udp_events.cpp
    udp_snapshot.cpp
    web_socket.cpp
    main.cpp)

include(RoqAutogen)

set(AUTOGEN_SCHEMAS market_data_state.json order_entry_state.json web_socket_state.json
                    drop_copy_state.json)

roq_autogen(
  OUTPUT
  AUTOGEN_HEADERS
  NAMESPACE
  "roq/deribit"
  OUTPUT_TYPE
  "state"
  FILE_TYPE
  "hpp"
  SOURCES
  ${AUTOGEN_SCHEMAS})

add_custom_target(autogen-headers ALL DEPENDS ${AUTOGEN_HEADERS})

roq_gitignore(OUTPUT ".gitignore" SOURCES "${TARGET_NAME}" ${AUTOGEN_HEADERS})

add_executable("${TARGET_NAME}" ${SOURCES})

add_dependencies("${TARGET_NAME}" autogen-headers autogen-fix-headers autogen-json-headers)

target_link_libraries(
  "${TARGET_NAME}"
  PRIVATE "${PROJECT_NAME}-fix"
          "${PROJECT_NAME}-json"
          "${PROJECT_NAME}-flags"
          "${PROJECT_NAME}-tools"
          "${PROJECT_NAME}-sbe"
          roq-server::roq-server
          roq-web::roq-web
          roq-io::roq-io
          roq-core::roq-core
          roq-logging::roq-logging
          roq-api::roq-api
          absl::flags
          absl::flat_hash_map
          absl::flat_hash_set
          ${UUID_LIBRARIES}
          ${RT_LIBRARIES})

target_compile_features("${TARGET_NAME}" PUBLIC cxx_std_20)

set_target_properties("${TARGET_NAME}" PROPERTIES LINK_FLAGS_RELEASE -s)

target_compile_definitions(
  "${TARGET_NAME}"
  PRIVATE ROQ_PACKAGE_NAME="${TARGET_NAME}" ROQ_HOST="${ROQ_HOST}"
          ROQ_BUILD_VERSION="${GIT_REPO_VERSION}" ROQ_GIT_DESCRIBE_HASH="${GIT_DESCRIBE_HASH}"
          ROQ_BUILD_NUMBER="${GIT_DESCRIBE_NUMBER}" ROQ_BUILD_TYPE="${ROQ_BUILD_TYPE}")

install(TARGETS ${TARGET_NAME})
